Atualização do dia

--- a/todo/4.md
+++ b/todo/4.md
@@ -4,6 +4,9 @@
 ## 🏗️ Modelagem Informacional
 
 - [x] Questionário MIR ZAGI
+- [ ] A1 Fase 1.1 DW - *01/09/25*
+- [ ] LAB trajetória DW - *08/09/25*
+- [ ] A1 Fase 1.2 DW - *29/09/25*
 
 ## 📐 Projeto e Análise de Algoritmos
 
@@ -23,6 +26,7 @@
 - [x] seção 7.2
 - [x] seção 7.3
 - [ ] seção 7.4
+- [ ] seção 7.5
 
 # 🎓 Mestrado
 
