Brinquei um pouco mais com a raspagem de dados do BCB :)

--- a/fieldProject/bndes/raspagem.ipynb
+++ b/fieldProject/bndes/raspagem.ipynb
@@ -2,35 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "f7db00e5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
-    "from pprint import pprint\n",
     "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "126b394b",
+   "execution_count": 16,
+   "id": "95da1484",
    "metadata": {},
    "outputs": [],
    "source": [
-    "numero_normativo = 41716\n",
-    "url = f\"https://www.bcb.gov.br/api/conteudo/app/normativos/exibeoutrasnormas?p1=COMUNICADO&p2={numero_normativo}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "7019cb17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "headers = {\n",
+    "def get_normativo_bcb(numero_normativo):\n",
+    "    url = f\"https://www.bcb.gov.br/api/conteudo/app/normativos/exibeoutrasnormas?p1=COMUNICADO&p2={numero_normativo}\"\n",
+    "    headers = {\n",
     "    \"Host\": \"www.bcb.gov.br\",\n",
     "    \"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:142.0) Gecko/20100101 Firefox/142.0\",\n",
     "    \"Accept\": \"application/json, text/plain, */*\",\n",
@@ -41,32 +31,19 @@
     "    \"Sec-Fetch-Dest\": \"empty\",\n",
     "    \"Sec-Fetch-Mode\": \"cors\",\n",
     "    \"Sec-Fetch-Site\": \"same-origin\",\n",
-    "}"
+    "    }\n",
+    "    page = requests.get(url, headers=headers)\n",
+    "    conteudo_lei = BeautifulSoup(page.json()['conteudo'][0]['Texto'], 'lxml')\n",
+    "    texto_lei = conteudo_lei.get_text(separator='\\n', strip=True)\n",
+    "\n",
+    "    return texto_lei\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "50efafb2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    }
-   ],
-   "source": [
-    "page = requests.get(url, headers=headers)\n",
-    "print(page.status_code)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "fe23f060",
+   "execution_count": 17,
+   "id": "c54d38b3",
    "metadata": {},
    "outputs": [
     {
@@ -92,15 +69,161 @@
       "9. A presente oferta pública será realizada exclusivamente pelo módulo Ofpub, previsto no Regulamento do Sistema Especial de Liquidação e de Custódia (Selic).\n",
       "Departamento de Operações do Mercado Aberto\n",
       "André de Oliveira Amante\n",
-      "Chefe\n"
+      "Chefe\n",
+      "__________________________________________________\n",
+      "O Banco Central do Brasil, com base no disposto na Resolução BCB nº 75, de 23 de fevereiro de 2021, torna público que, das 12:00 às 12:30 horas do dia 10 de junho de 2024, acolherá propostas das instituições financeiras participantes do módulo Ofpub para\n",
+      " a realização de operações de venda de títulos públicos com compromisso de revenda assumido pela instituição financeira compradora, admitida a livre movimentação dos títulos, com as seguintes características:\n",
+      "I – títulos:\n",
+      "a) Letras do Tesouro Nacional (LTN): vencimentos em 1º/10/2024, 1º/1/2025, 1º/4/2025, 1º/7/2025, 1º/10/2025, 1º/1/2026, 1º/4/2026, 1º/7/2026, 1º/7/2027, 1º/1/2028 e 1º/1/2030;\n",
+      "b) Notas do Tesouro Nacional, Série B (NTN-B): vencimentos em   15/5/2025, 15/8/2026, 15/5/2027, 15/8/2028, 15/5/2029, 15/8/2030, 15/8/2032, 15/5/2033,  15/5/2035, 15/8/2040, 15/5/2045, 15/8/2050, 15/5/2055 e 15/8/2060;\n",
+      "c) Notas do Tesouro Nacional, Série F (NTN-F): vencimentos em 1º/1/2025, 1º/1/2027,  1º/1/2029, 1º/1/2031, 1º/1/2033 e 1º/1/2035; e\n",
+      "d) Letras Financeiras do Tesouro (LFT): vencimentos em 1º/3/2025,  1º/9/2025, 1º/3/2026, 1º/9/2026, 1º/3/2027, 1º/9/2027, 1º/3/2028,  1º/9/2028, 1º/3/2029, 1º/9/2029, 1º/3/2030 e 1º/6/2030.\n",
+      "II – valor financeiro máximo desta oferta: R$ 4.000.000.000,00 (quatro bilhões de reais), observado que, de um mesmo título/vencimento, cada instituição financeira poderá adquirir, no máximo, 100% do valor de sua(s) proposta(s) aceita(s);\n",
+      "III – preços unitários de venda: os informados pelo Departamento de Operações do Mercado Aberto (Demab), às 11:30 horas de 10/6/2024, na página do Sistema Especial de Liquidação e de Custódia  (Selic) na internet (www.rtm.selic.gov.br);\n",
+      "IV – divulgação do resultado: 10/6/2024, a partir das 12:30 horas;\n",
+      "V – data de liquidação da venda: 11/6/2024; e\n",
+      "VI – data de liquidação da revenda: 10/9/2024.\n",
+      "2. Na formulação das propostas, limitadas a 3 (três) por instituição, deverão ser informados o percentual, com 4 (quatro) casas decimais, a ser aplicado sobre o fator diário da taxa Selic deduzido de uma unidade e o valor  financeiro, em milhares de reais.\n",
+      "3. As propostas deverão ter curso na aba Ofpub/Ofdealer do  Selic, opção “Lançamento” do submenu “Operações Compromissadas”.\n",
+      "4. O resultado será apurado pelo critério de percentual  único, acatando-se todas as propostas com percentual igual ou inferior ao percentual máximo aceito pelo Banco Central do Brasil,  o qual será aplicado a todas as propostas vencedoras.\n",
+      "5. A instituição com proposta aceita deverá informar ao Demab, até as 16:00 horas de 10/6/2024, o vencimento e o valor financeiro de cada um dos títulos objeto de sua compra, utilizando o módulo “Lastro” do Selic.\n",
+      "6. O preço unitário da revenda será calculado com a seguinte fórmula:\n",
+      "n                                    m\n",
+      "PUrevenda = PUvenda x P {[(fk - 1) x S/100]  +1}  - CJ1 x  P {[(fk - 1) x\n",
+      "k=1                                  k=1\n",
+      "q\n",
+      "S/100]+1}  - CJ2  x P {[(fk -1) x S/100]+1}\n",
+      "k=1\n",
+      "em que:\n",
+      "I – PUrevenda corresponde ao preço unitário de revenda do título ao Banco Central do Brasil na data do compromisso, arredondado na oitava casa decimal;\n",
+      "II – PUvenda corresponde ao preço unitário de venda do título pelo Banco Central do Brasil, conforme definido no primeiro parágrafo, inciso III;\n",
+      "III – f corresponde ao fator diário da taxa Selic, divulgado pelo Banco Central do Brasil, relativo ao k-ésimo dia útil;\n",
+      "IV – S corresponde ao percentual definido no quarto parágrafo;\n",
+      "V – n corresponde ao número de dias úteis compreendidos entre a data de liquidação da venda, inclusive, e a data de liquidação da revenda, exclusive;\n",
+      "VI – CJ1 corresponde ao primeiro cupom de juros unitário pago pelo título durante a vigência do compromisso;\n",
+      "VII – m corresponde ao número de dias úteis compreendidos entre a data de pagamento do cupom de juros, inclusive, e a data de liquidação da revenda, exclusive;\n",
+      "VIII – CJ2 corresponde ao segundo cupom de juros unitário pago pelo título durante a vigência do compromisso;\n",
+      "IX  –  q corresponde ao número de dias úteis compreendidos entre a data de pagamento do segundo  cupom de juros, inclusive, e a data de liquidação da revenda, exclusive; e\n",
+      "X  –  P corresponde ao produtório.\n",
+      "7. Não havendo pagamento de cupom de juros durante a vigência do compromisso, os valores “CJ1” e “CJ2” contidos na fórmula definida no sexto parágrafo serão iguais a zero.\n",
+      "8. As operações de que tratam este Comunicado devem ser registradas no Selic sob o código 1047.\n",
+      "Departamento de Operações do Mercado Aberto\n",
+      "André de Oliveira Amante\n",
+      "Chefe\n",
+      "__________________________________________________\n",
+      "O certificado digital SSL wildcard do Banco Central do Brasil utilizado em sistemas disponíveis na Internet será substituído no dia\n",
+      "16 de junho de 2024\n",
+      ",\n",
+      "a partir das 8h\n",
+      ". O novo certificado digital, bem como sua cadeia de confiança, está disponível em:\n",
+      "https://www.bcb.gov.br/estabilidadefinanceira/certificacaodigital.\n",
+      "2. Os usuários de serviços webservices devem verificar e providenciar os necessários ajustes decorrentes da troca do certificado digital.\n",
+      "3.  Os principais sistemas afetados serão:\n",
+      "Sistema         Endereço\n",
+      "BCCorreio       https://bccorreio.bcb.gov.br/bccorreiows/\n",
+      "PTAX            https://ptax.bcb.gov.br/wsmoeda/\n",
+      "RDR             https://www3.bcb.gov.br/rdrws/\n",
+      "SCR             https://scr.bcb.gov.br/wsscr/\n",
+      "SGS             https://www3.bcb.gov.br/wssgs/services/FachadaWSSGS/\n",
+      "STA\n",
+      "https://sta.bcb.gov.br/staws/\n",
+      "Dados abertos   https://dadosabertos.bcb.gov.br/\n",
+      "Haroldo Jayme Martins Froes Cruz\n",
+      "Chefe do Departamento de Tecnologia da Informação\n",
+      "__________________________________________________\n",
+      "Divulgamos o nome aprovado de pessoas eleitas/nomeadas para cargos de órgãos estatutários ou contratuais de instituições financeiras, administradoras de consórcio e demais sociedades autorizadas a funcionar pelo Banco Central do Brasil:\n",
+      "Processo:\n",
+      "268471.\n",
+      "Data do despacho:\n",
+      "4.6.2024.\n",
+      "Instituição:\n",
+      "Cooperativa de Crédito Carlos Chagas Ltda. - Sicoob Carlos Chagas (CNPJ 41.753.500).\n",
+      "Ato societário:\n",
+      "Assembleia Geral Ordinária de 1.4.2024.\n",
+      "Órgão estatutário:\n",
+      "Conselho Fiscal.\n",
+      "Nomes:\n",
+      "Kassia Martins Costa Alves (CPF 046.497.496-89); Márcio Felipe Viana Maia (CPF 084.829.956-69); Otávio Pereira Coelho (CPF 109.242.536-57); e Samuel Nacur Batista Rodrigues Quaresma (CPF 103.597.406-18).\n",
+      "Processo:\n",
+      "268549.\n",
+      "Data do despacho:\n",
+      "5.6.2024.\n",
+      "Instituição:\n",
+      "Emcash Serviços Financeiros Sociedade de Empréstimo entre Pessoas S.A. (CNPJ 34.139.916).\n",
+      "Ato societário:\n",
+      "Assembleia Geral Ordinária e Extraordinária de 29.4.2024.\n",
+      "Órgão estatutário:\n",
+      "Diretoria.\n",
+      "Nomes:\n",
+      "Guilherme Bianchetti Correa Maia (CPF 084.913.606-70); e Márcio Nunes da Silva (CPF 512.399.905-10).\n",
+      "Processo:\n",
+      "268553.\n",
+      "Data do despacho:\n",
+      "4.6.2024.\n",
+      "Instituição:\n",
+      "Agência de Fomento do Estado do Amazonas S.A. - Afeam (CNPJ 03.183.937).\n",
+      "Ato societário:\n",
+      "Reunião do Conselho de Administração de 29.4.2024.\n",
+      "Órgão estatutário:\n",
+      "Diretoria Colegiada.\n",
+      "Nomes:\n",
+      "Cristina Coelho da Silva (CPF 418.291.662-04); João Batista Silva Tavares (CPF 077.593.982-04); e Marcos Vinícius Cardoso de Castro (CPF 347.152.742-72).\n",
+      "Processo:\n",
+      "269170.\n",
+      "Data do despacho:\n",
+      "5.6.2024.\n",
+      "Instituição:\n",
+      "Mercado Crédito Sociedade de Crédito, Financiamento e Investimento S.A. (CNPJ 37.679.449).\n",
+      "Ato societário:\n",
+      "Assembleia Geral Extraordinária de 10.5.2024.\n",
+      "Órgão estatutário:\n",
+      "Diretoria.\n",
+      "Nome:\n",
+      "Ricardo Lagreca Siqueira (CPF 149.094.518-03).\n",
+      "Processo:\n",
+      "268444.\n",
+      "Data do despacho:\n",
+      "28.5.2024.\n",
+      "Instituição:\n",
+      "Cooperativa de Crédito e Investimento com Interação Solidária Centro Serra - Cresol Centro Serra (CNPJ 01.155.801).\n",
+      "Ato societário:\n",
+      "Reunião do Conselho de Administração de 29.4.2024.\n",
+      "Órgão estatutário:\n",
+      "Diretoria Executiva.\n",
+      "Nome:\n",
+      "Taynara Mariot (CPF 096.055.039-99).\n",
+      "Carolina Pancotto Bohrer\n",
+      "Chefe do Departamento de Organização do Sistema Financeiro\n",
+      "__________________________________________________\n",
+      "O Banco Central do Brasil, tendo em vista o disposto na Resolução CMN nº 2.939, de 26 de março de 2002, e na Resolução BCB nº 76, de 23 de fevereiro de 2021, torna público que, das 11:30 às 11:40 horas do dia 7 de junho de 2024, acolherá propostas das instituições\n",
+      " financeiras participantes do módulo Oferta Pública (Ofpub) para a realização de operações de swap a serem registradas na B3 - Brasil, Bolsa, Balcão S.A., nos termos do \"Contrato de Swap Cambial com Ajuste Periódico Baseado em Operações Compromissadas de Um\n",
+      " Dia - SCS\" daquela bolsa, com as seguintes características:\n",
+      "Posição          Posição\n",
+      "Data de       Data de       assumida pelo    assumida pelas   Quantidade de\n",
+      "início        vencimento    Banco Central    inst.financeiras contratos\n",
+      "01/08/2024    03/02/2025     compradora       vendedora        até 12.000\n",
+      "01/08/2024    01/04/2025     compradora       vendedora        até 12.000\n",
+      "2. Serão aceitos no máximo até 12.000 (doze mil) contratos a serem distribuídos a critério do Banco Central do Brasil, entre os vencimentos acima mencionados.\n",
+      "3.  Na formulação das propostas, limitadas a 5 (cinco) por instituição, deverão ser informadas a quantidade de contratos e a respectiva taxa de juros representativa de cupom cambial, expressa como taxa linear anual, base 360 (trezentos e sessenta) dias corridos,\n",
+      " com 3 (três) casas decimais.\n",
+      "4. Na apuração da presente oferta pública será utilizado o critério de preço único, acatando-se todas as propostas com taxa igual ou inferior à taxa máxima aceita pelo Banco Central do Brasil, a qual será aplicada a todas as propostas vencedoras.\n",
+      "5. O resultado desta oferta pública será divulgado após a apuração realizada pelo  Banco Central do Brasil.\n",
+      "6. Após a divulgação do resultado, o Banco Central do Brasil enviará à B3 a relação das instituições contempladas, a quantidade de contratos aceita para cada uma e a taxa de juros apurada no leilão.\n",
+      "7. Conforme previsto em Ofício-circular da B3, as instituições que tiverem suas propostas aceitas deverão eleger uma corretora associada àquela bolsa para que proceda ao pré-registro das operações de swap de que se trata.\n",
+      "8. As pessoas físicas e as demais pessoas jurídicas poderão participar da oferta de que trata este comunicado, por intermédio das instituições referidas no parágrafo primeiro.\n",
+      "9. A presente oferta pública será realizada exclusivamente pelo módulo Ofpub, previsto no Regulamento do Sistema Especial de Liquidação e de Custódia (Selic).\n",
+      "Departamento de Operações do Mercado Aberto\n",
+      "André de Oliveira Amante\n",
+      "Chefe\n",
+      "__________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "conteudo_lei = BeautifulSoup(page.json()['conteudo'][0]['Texto'], 'lxml')\n",
-    "texto_lei = conteudo_lei.get_text(separator='\\n', strip=True)\n",
-    "\n",
-    "print(texto_lei)"
+    "numero_normativo = [41716, 41717, 41718, 41710, 41711]\n",
+    "for n in numero_normativo:\n",
+    "    print(get_normativo_bcb(numero_normativo=n))\n",
+    "    print('_'*50)"
    ]
   }
  ],
