Adicionei uma parte para o field

--- a/todo/4.md
+++ b/todo/4.md
@@ -20,15 +20,21 @@
 
 - [ ] Módulo 1
 
-## 🧮 Inferência Estatística
+## 🧮 *Inferência Estatística*
 
 - [x] seção 7.1
 - [x] seção 7.2
 - [x] seção 7.3
 - [x] seção 7.4
-- [ ] seção 7.5
+- [x] seção 7.5
+- [ ] seção 7.6
+ 
 
-# 🎓 Mestrado
+## 🩺 Projeto de Campo
+
+- [ ] Ler artigos de Healthy analytics
+ ---
+# *🎓 Mestrado*
 
 
 
@@ -37,4 +43,4 @@
 
 
 ## 🤖 Reinforcement Learning
-- [ ] Projeto 1 - *02/09/2025*
+- [x] Projeto 1 - *02/09/2025*
