--- a/todo/4.md
+++ b/todo/4.md
@@ -4,13 +4,14 @@
 ## 🏗️ Modelagem Informacional
 
 - [x] Questionário MIR ZAGI
-- [ ] A1 Fase 1.1 DW - *01/09/25*
+- [ ] A1 Fase 1.1 DW - *08/09/25*
 - [ ] LAB trajetória DW - *08/09/25*
 - [ ] A1 Fase 1.2 DW - *29/09/25*
 
 ## 📐 Projeto e Análise de Algoritmos
 
-- [x] 
+- [ ] Lista 1
+ 
 
 ## 🔍 Otimização para Ciência de Dados
 
